-Attempt to solve overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,6 @@ a {
     background: linear-gradient(-45deg, #1D1CE5, #4649FF, #7978FF, #C47AFF);
     background-size: 400% 400%;
     animation: gradient 5s ease infinite;
-    overflow: auto;
     /* border: 1px solid yellow; */
   }
 
@@ -49,4 +48,10 @@ a {
       background-position: 0% 50%;
     }
   }
+}
+
+html, body{
+  height: auto;
+  max-height: auto;
+  overflow: auto;
 }
